--- a/FY19/Web.config
+++ b/FY19/Web.config
@@ -16,7 +16,7 @@
     <add key="CMSApplicationName" value="Default Web Site/MyFY19" />
     <add key="CMSHashStringSalt" value="43a98375-595c-41f5-a197-acd22711a9b1" />
     <add key="CMSImageExtensions" value="bmp;gif;ico;png;wmf;jpg;jpeg;tiff;tif" />
-    <add key="CMSCIRepositoryPath" value="C:\inetpub\wwwroot\MyFY19\CMS\App_Data\CIRepository" />
+    <!--<add key="CMSCIRepositoryPath" value="C:\inetpub\wwwroot\MyFY19\CMS\App_Data\CIRepository" />-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
