--- a/CMS/Web.config
+++ b/CMS/Web.config
@@ -23,13 +23,13 @@
   </appSettings>
   <connectionStrings>
     <clear />
-    <add name="CMSConnectionString" connectionString="Data Source=DESKTOP-G31OJG1\SQLEXPRESS;Initial Catalog=0524FY19;Integrated Security=True;Persist Security Info=False;Connect Timeout=60;Encrypt=False;Current Language=English;" />
+    <add name="CMSConnectionString" connectionString="Data Source=H01-17-01\SQLEXPRESS;Initial Catalog=Kentico_FY19_2;Integrated Security=False;Persist Security Info=False;User ID=macaputin.rb;Password=test123;Connect Timeout=60;Encrypt=False;Current Language=English;" />
   </connectionStrings>
   <system.web>
     <pages validateRequest="false" clientIDMode="AutoID">
       <controls>
         <add tagPrefix="ajaxToolkit" namespace="AjaxControlToolkit" assembly="AjaxControlToolkit"/>
-        <add tagPrefix="cms" namespace="CMS.PortalEngine.Web.UI" assembly="CMS.PortalEngine.Web.UI"/>
+       <add tagPrefix="cms" namespace="CMS.PortalEngine.Web.UI" assembly="CMS.PortalEngine.Web.UI"/>
         <add tagPrefix="cms" namespace="CMS.DocumentEngine.Web.UI" assembly="CMS.DocumentEngine.Web.UI"/>
         <add tagPrefix="cms" namespace="CMS.UIControls" assembly="CMS.UIControls"/>
         <add tagPrefix="cms" namespace="CMS.FormEngine" assembly="CMS.FormEngine"/>
