--- a/FY19/Web.config
+++ b/FY19/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="CMSConnectionString" connectionString="Data Source=DESKTOP-G31OJG1\SQLEXPRESS;Initial Catalog=0524FY19;Integrated Security=True;Persist Security Info=False;Connect Timeout=60;Encrypt=False;Current Language=English;" />
+    <add name="CMSConnectionString" connectionString="Data Source=H01-17-01\SQLEXPRESS;Initial Catalog=Kentico_FY19_2;Integrated Security=False;Persist Security Info=False;User ID=macaputin.rb;Password=test123;Connect Timeout=60;Encrypt=False;Current Language=English;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -15,6 +15,7 @@
     <add key="CMSApplicationGuid" value="78826a37-9e93-4435-acc8-a6b1e5103e88" />
     <add key="CMSApplicationName" value="Default Web Site/MyFY19" />
     <add key="CMSHashStringSalt" value="43a98375-595c-41f5-a197-acd22711a9b1" />
+    
     <add key="CMSImageExtensions" value="bmp;gif;ico;png;wmf;jpg;jpeg;tiff;tif" />
     <!--<add key="CMSCIRepositoryPath" value="C:\inetpub\wwwroot\MyFY19\CMS\App_Data\CIRepository" />-->
   </appSettings>
