--- a/FY19/FY19.csproj
+++ b/FY19/FY19.csproj
@@ -54,8 +54,8 @@
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.3.5.0\lib\net40\Autofac.dll</HintPath>
+    <Reference Include="Autofac">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
     </Reference>
     <Reference Include="Autofac.Extras.DynamicProxy2, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.Extras.DynamicProxy2.3.0.7\lib\net40\Autofac.Extras.DynamicProxy2.dll</HintPath>
@@ -576,7 +576,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.7.7\lib\net45\NLog.dll</HintPath>
+      <HintPath>packages\NLog.4.7.10\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="NuGet.Core, Version=2.14.0.832, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <HintPath>..\packages\NuGet.Core.2.14.0\lib\net40-Client\NuGet.Core.dll</HintPath>
@@ -603,10 +603,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC.1.0.0\lib\net461\SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC.dll</HintPath>
+      <HintPath>packages\SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC.1.0.0\lib\net461\SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC.dll</HintPath>
     </Reference>
     <Reference Include="SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC.Views, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC.1.0.0\lib\net461\SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC.Views.dll</HintPath>
+      <HintPath>packages\SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC.1.0.0\lib\net461\SeventyeightDigital.CKEditor4_Wysiwyg.Kentico.MVC.Views.dll</HintPath>
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Data.HashFunction.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=80c9288e394c1322">
