--- a/.gitignore
+++ b/.gitignore
@@ -321,3 +321,18 @@ CMS/PersonalSite
 ## Project specific ignores
 # Sensitive settings
 AppSettings.config
+/CMS/FY19/media/fy19/__thumbnails/received_475106777103320_jpeg_173_200.jpeg
+/CMS/FY19/media/fy19/received_475106777103320.jpeg
+/CMS/FY19/media/fy19/__thumbnails/received_475106777103320_jpeg_260_300.jpeg
+/FY19/FY19/media/FY19/__thumbnails/MicrosoftTeams-image-(1)_png_160_108.png
+/FY19/FY19/media/FY19/__thumbnails/MicrosoftTeams-image-(1)_png_320_217.png
+/FY19/FY19/media/FY19/__thumbnails/received_475106777103320_jpeg_277_320.jpeg
+/FY19/FY19/media/FY19/__thumbnails/received_475106777103320_jpeg_139_160.jpeg
+/FY19/FY19/media/FY19/__thumbnails/received_475106777103320-removebg-preview_png_278_320.png
+/FY19/FY19/media/FY19/__thumbnails/received_475106777103320-removebg-preview_png_139_160.png
+/FY19/FY19/media/FY19/__thumbnails/received_1212785955820289_jpeg_320_306.jpeg
+/FY19/FY19/media/FY19/__thumbnails/received_1212785955820289_jpeg_160_153.jpeg
+/FY19/FY19/media/FY19/received_475106777103320.jpeg
+/FY19/FY19/media/FY19/received_475106777103320-removebg-preview.png
+/FY19/FY19/media/FY19/received_1212785955820289.jpeg
+/FY19/FY19/media/FY19/MicrosoftTeams-image-(1).png
