--- a/FY19/Web.config
+++ b/FY19/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="CMSConnectionString" connectionString="Data Source=DESKTOP-G31OJG1\SQLEXPRESS;Initial Catalog=0524FY19;Integrated Security=True;Persist Security Info=False;Connect Timeout=60;Encrypt=False;Current Language=English;" />
+    <add name="CMSConnectionString" connectionString="Data Source=H01-17-01\SQLEXPRESS;Initial Catalog=Kentico_FY19_1;Integrated Security=False;Persist Security Info=False;User ID=macaputin.rb;Password=test123;Connect Timeout=60;Encrypt=False;Current Language=English;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
